--- a/assets/scss/core/_typo.scss
+++ b/assets/scss/core/_typo.scss
@@ -1,6 +1,6 @@
 body {
 	font-family: 'Open Sans', sans-serif;
-	background-color: #FAFAFA;
+	background-color: $color-gris-cuerpo;
 }
 
 h1, h2, h3, h4 {
