--- a/assets/scss/module/_playlist.scss
+++ b/assets/scss/module/_playlist.scss
@@ -45,7 +45,7 @@
 	@extend %grid;
 }
 .playlist__title{
-	color: #444050;	
+	color: $color-gris;	
 	font-style: italic;
 	font-weight: normal;
 }
@@ -86,6 +86,6 @@
 }
 .thumbs__name{
 	position: absolute;
-    color: white;
+    color: $color-blanco;
     margin: -2.5rem 0 0 1rem;
 }
