push enabled en csswizardry-grids

--- a/assets/scss/core/_csswizardry-grids.scss
+++ b/assets/scss/core/_csswizardry-grids.scss
@@ -96,7 +96,7 @@ $use-silent-classes:    true !default;
 /**
  * Would you like push and pull classes enabled?
  */
-$push:                  false !default;
+$push:                  true !default;
 $pull:                  false !default;
 
 
